# flii-marketplace-contract

./: .gitignore  Anchor-verified.toml  Anchor.toml  Cargo.toml  MAINNET_DEPLOYMENT.md  README-VERIFICATION.md  README.md  SUBMIT-VERIFICATION.md  VERIFICATION_GUIDE.md  deploy-mainnet.sh  frontend-integration.js  initialize-fixed.js  initialize-marketplace-now.js  initialize-marketplace.ts  package.json  push-to-github.sh  submit-verifications.sh  test-ci.sh
.github/workflows/: ci.yml
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs  lib_mainnet.rs  lib_old.rs
programs/revenue-share/: Cargo.toml
programs/revenue-share/src/: lib.rs
programs/token/: Cargo.toml
programs/token/src/: instructions.rs  lib.rs  state.rs
scripts/deploy/: deploy.ts
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  index.ts
sdk/src/types/: index.ts
tests/integration/: marketplace.test.ts
