[package]
name = "marketplace"
version = "0.1.0"
description = "FLII.dev marketplace smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["associated_token"] }
solana-program = "1.17.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
