[package]
name = "revenue-share"
version = "0.1.0"
description = "Revenue sharing program for FLII.dev"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "revenue_share"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
